--- a/wjw/gulp/index.html
+++ b/wjw/gulp/index.html
@@ -384,15 +384,7 @@
 		</div>
 	</div>
 	<div class="banner" id="banner">
-		<!-- <a class="as1" id="asb" href="#">
-			<img src="imgs/index/b1.jpg" alt="">
-		</a>
-		<a class="as2" id="asb" href="#">
-			<img src="imgs/index/b2.jpg" alt="">
-		</a>
-		<a class="as3" id="asb" href="#">
-			<img src="imgs/index/b3.jpg" alt="">
-		</a> -->
+		
 	</div>
 	<div class="dongtai">
 		
@@ -917,6 +909,7 @@
 		</div>
 	</div>
 	<div class="footer">
+
 		<div class="top">
 			<div class="top_1">
 				<img src="imgs/index/f1.png" alt="">
@@ -1011,20 +1004,25 @@
 			
 		</div>
 	</div>
-	<div class="gwc">
-		<div class="shang">
-			<a href=""><span>我的购物车</span></a>
-			<a href=""><span>我的优惠券</span></a>
-			<a href=""><span>我的收藏</span></a>
-			<a href=""><span>我的足迹</span></a>
-			<a href=""><span>我要咨询</span></a>
-			<a href=""><span>我要分享</span></a>
-		</div>
-		<div class="xia">
-			<a href=""><span></span></a>
-			<a href=""></a>
+	
+	<div class="goshopping">
+		<div class="gp">
+			<div class="shang">
+				<a href=""><span>我的购物车</span></a>
+				<a href=""><span>我的优惠券</span></a>
+				<a href=""><span>我的收藏</span></a>
+				<a href=""><span>我的足迹</span></a>
+				<a href=""><span>我要咨询</span></a>
+				<a href=""><span>我要分享</span></a>
+			</div>
+			<div class="xia">
+				<a href=""><span></span></a>
+				<a href=""></a>
+			</div>
 		</div>
 	</div>
+	
+	
 </body>
 </html>
 <script type="text/javascript" src="js/jquery-1.8.3.min.js" ></script>
@@ -1050,6 +1048,12 @@
 				true,-1,1500);
 		product();
 		menu();
+		
+		
+		
+		
+		
+		
 	}
 
 </script> 
