--- a/wjw/gulp/login.html
+++ b/wjw/gulp/login.html
@@ -21,9 +21,15 @@
 					<a href="" class="as2">立即登录</a>
 				</div>
 				<form action="">
-					<span></span><input class="inp1" type="text" placeholder="手机号"/>
-					<span></span><input class="inp2" type="password" placeholder="密码"/>
-					<input type="text" placeholder=""/>
+					<input class="inp1" type="text" placeholder="手机号"/>
+					<input class="inp2" type="password" placeholder="密码"/>
+					<input class="inp3" type="text" placeholder="输入验证，点击更换图片"/>
+					<input type="text" name="" id="" placeholder="6位验证码" />
+					<a href="" class="as1">获取验证码</a>
+					<input class="inp5" type="checkbox" name="" id="" value="" /><span>我已阅读并同意</span>
+					<a href="" class="as2">乐视用户协议</a>
+					<a href="" class="as3">注册</a>
+					
 				</form>
 				
 			</div>
