--- a/wjw/gulp/login.html
+++ b/wjw/gulp/login.html
@@ -1,12 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/login.css">
-</head>
-<body>
-	<div class="header">
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title></title>
+		<link rel="stylesheet" href="css/login.css" />
+	</head>
+	<body>
+		<div class="header">
 		<div class="right"></div>
 		<div class="left">
 			<span>语言：<a href="">简体中文</a>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -17,22 +17,61 @@
 	<div class="content">
 			<div class="box">
 				<div class="top">
-					<a href="" class="as1">注册</a>
-					<a href="" class="as2">立即登录</a>
+					<a href="" class="as1">登录</a>
+					<a href="" class="as2">短信验证登录</a>		
 				</div>
-				<form action="">
-					<input class="inp1" type="text" placeholder="手机号"/>
-					<input class="inp2" type="password" placeholder="密码"/>
-					<input class="inp3" type="text" placeholder="输入验证，点击更换图片"/>
-					<input type="text" name="" id="" placeholder="6位验证码" />
-					<a href="" class="as1">获取验证码</a>
-					<input class="inp5" type="checkbox" name="" id="" value="" /><span>我已阅读并同意</span>
-					<a href="" class="as2">乐视用户协议</a>
-					<a href="" class="as3">注册</a>
-					
-				</form>
+				<span id="sp"></span>
+				<div class="for">
+					<input class="inp1" id="phone" type="text" name="phone" placeholder="手机号"/>
+					<input class="inp2" id="password" type="password" name="password" placeholder="密码"/>									
+					<input class="inp5" type="checkbox" name="" id="" value="" /><span class="sp1">记住登录状态</span>
+					<a href="" class="as2">重置密码</a>
+					<input class="inp4" type="button" id="login" value="登录"/>
+					<p id="tishi" style="color: red; display:none"></p>
+					<p class="ps1">从这里出发，开启乐视生态世界 <a href="reg.html">立即注册</a></p>
+					<p class="ps2"><span>其他方式登录</span></p>
+					<p class="ps3">
+						<a href=""></a>
+						<a href=""></a>
+						<a href=""></a>	
+						<span>展开></span>
+					</p>
+					<p class="ps4">
+						<a href=""></a>
+						<a href=""></a>
+						<a href=""></a>
+						<a href=""></a>
+						<a href=""></a>
+						<a href=""></a>
+						<span><收起</span>
+					</p>					
+				</div>
 				
 			</div>
 	</div>
-</body>
+	</body>
 </html>
+
+<script src="js/login.js"></script>
+<script src="js/jquery-1.8.3.min.js"></script>
+<script>
+	$(function(){
+		$(".ps3 span").click(function(){
+			$(".ps3").css({
+				display:"none"
+			});
+			$(".ps4").css({
+				display:"block"
+			});
+		});
+		$(".ps4 span").click(function(){
+			$(".ps3").css({
+				display:"block"
+			});
+			$(".ps4").css({
+				display:"none"
+			});
+		});
+		login();
+	});
+</script>
